fix-title-animation

--- a/src/pug/sections/_main-hero.pug
+++ b/src/pug/sections/_main-hero.pug
@@ -6,14 +6,14 @@ section.main-hero
 				.hero-slide
 					.hero-slide__img
 						picture
-							source(srcset="./img/main-slider/slide-w370@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)" width="767")
-							source(srcset="./img/main-slider/slide-w370.webp", media="(max-width: 767px)" width="767")
+							source(srcset="./img/main-slider/slide-w375@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)" width="767")
+							source(srcset="./img/main-slider/slide-w375.webp", media="(max-width: 767px)" width="767")
 							source(srcset="./img/main-slider/slide@2x.webp", media="(min-resolution: 192dpi)" width="1920" height="1080")
 							img(src="./img/main-slider/slide.webp", width="1920" height="1080" alt="img")
 					
 					//===== slide text ====
 					.hero-slide__text
-						.h1-serif Коллекция NorthBloom Лето 2024
+						.h1-serif Коллекция NorthBloom Зима 2024
 						.center-group.mt-24
 							a(href="catalogy.html").txt-24.chevron-link 
 								span Для мужчин
@@ -28,14 +28,35 @@ section.main-hero
 				.hero-slide
 					.hero-slide__img
 						picture
-							source(srcset="./img/main-slider/slide-w370@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)" width="767")
-							source(srcset="./img/main-slider/slide-w370.webp", media="(max-width: 767px)" width="767")
+							source(srcset="./img/main-slider/slide3-w375@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)" width="767")
+							source(srcset="./img/main-slider/slide3-w375.webp", media="(max-width: 767px)" width="767")
+							source(srcset="./img/main-slider/slide3@2x.webp", media="(min-resolution: 192dpi)" width="1920" height="1080")
+							img(src="./img/main-slider/slide3.webp", width="1920" height="1080" alt="img")
+					
+					//===== slide text ====
+					.hero-slide__text
+						.h1-serif Коллекция NorthBloom Осень 2024
+						.center-group.mt-24
+							a(href="catalogy.html").txt-24.chevron-link 
+								span Для мужчин
+								svg.svg-chevron-right
+									use(href='./img/sprite.svg#svg-chevron-right')
+							a(href="catalogy.html").txt-24.chevron-link 
+								span Для женщин
+								svg.svg-chevron-right
+									use(href='./img/sprite.svg#svg-chevron-right')
+			//==== single slide =====
+			.swiper-slide
+				.hero-slide
+					.hero-slide__img
+						picture
+							source(srcset="./img/main-slider/slide2-w375@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)" width="767")
+							source(srcset="./img/main-slider/slide2-w375.webp", media="(max-width: 767px)" width="767")
 							source(srcset="./img/main-slider/slide2@2x.webp", media="(min-resolution: 192dpi)" width="1920" height="1080")
 							img(src="./img/main-slider/slide2.webp", width="1920" height="1080" alt="img")
-					
 					//===== slide text ====
 					.hero-slide__text
-						.h1-serif Коллекция NorthBloom Лето 2024
+						.h1-serif Коллекция NorthBloom Весна 2024
 						.center-group.mt-24
 							a(href="catalogy.html").txt-24.chevron-link 
 								span Для мужчин
@@ -50,31 +71,10 @@ section.main-hero
 				.hero-slide
 					.hero-slide__img
 						picture
-							source(srcset="./img/main-slider/slide-w370@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)" width="767")
-							source(srcset="./img/main-slider/slide-w370.webp", media="(max-width: 767px)" width="767")
-							source(srcset="./img/main-slider/slide@2x.webp", media="(min-resolution: 192dpi)" width="1920" height="1080")
-							img(src="./img/main-slider/slide.webp", width="1920" height="1080" alt="img")
-					//===== slide text ====
-					.hero-slide__text
-						.h1-serif Коллекция NorthBloom Лето 2024
-						.center-group.mt-24
-							a(href="catalogy.html").txt-24.chevron-link 
-								span Для мужчин
-								svg.svg-chevron-right
-									use(href='./img/sprite.svg#svg-chevron-right')
-							a(href="catalogy.html").txt-24.chevron-link 
-								span Для женщин
-								svg.svg-chevron-right
-									use(href='./img/sprite.svg#svg-chevron-right')
-			//==== single slide =====
-			.swiper-slide
-				.hero-slide
-					.hero-slide__img
-						picture
-							source(srcset="./img/main-slider/slide-w370@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)"  width="767")
-							source(srcset="./img/main-slider/slide-w370.webp", media="(max-width: 767px)" width="767")
-							source(srcset="./img/main-slider/slide@2x.webp", media="(min-resolution: 192dpi)"  width="1920" height="1080")
-							img(src="./img/main-slider/slide2.webp", width="1920" height="1080" alt="img")
+							source(srcset="./img/main-slider/slide4-w375@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)"  width="767")
+							source(srcset="./img/main-slider/slide4-w375.webp", media="(max-width: 767px)" width="767")
+							source(srcset="./img/main-slider/slide4@2x.webp", media="(min-resolution: 192dpi)"  width="1920" height="1080")
+							img(src="./img/main-slider/slide4.webp", width="1920" height="1080" alt="img")
 					
 					//===== slide text ====
 					.hero-slide__text
