--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -24,7 +24,7 @@ html(lang="ru")
 		link(rel="stylesheet", href="./libs/swiper/swiper.min.css")
 		
 		//============ fancybox =============
-		link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css")
+		link(rel="stylesheet", href="./libs/fancybox/fancybox.css")
 		
 		//======= main styles ======
 		link(rel="stylesheet", href="./css/main.css")
@@ -81,9 +81,9 @@ html(lang="ru")
 
 		
 		//=============== swiper js ===============
-		//- script(src="./libs/swiper/swiper.js")
-		script(src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js")
+		script(src="./libs/swiper/swiper.js")
+		//- script(src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js")
 		//============fancybox====================
-		script(src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js")
+		script(src="./libs/fancybox/fancybox.js")
 		//=============== main js ===================
 		script(src="./js/main.js")
