--- a/src/pug/pages/stores.pug
+++ b/src/pug/pages/stores.pug
@@ -15,7 +15,7 @@ block content
 				mapWrapper.style.display = 'block'; // Показываем блок карты
 
 				const script = document.createElement('script');
-				script.src = 'https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A13e02d731c04b56220a2a064d1fa54db38ac5402f907fd4bdf75e632a107fa8e&amp;width=100%25&amp;height=100%25&amp;lang=ru_RU&amp;scroll=true';
+				script.src = 'https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A13e02d731c04b56220a2a064d1fa54db38ac5402f907fd4bdf75e632a107fa8e&amp;width=100%25&amp;height=100%25&amp;lang=ru_RU&amp;scroll=false';
 				script.async = true;
 				script.defer = true;
 				script.onload = function() {
