--- a/src/scss/blocks/_product-card.scss
+++ b/src/scss/blocks/_product-card.scss
@@ -66,7 +66,8 @@
 		}
 	}
 	.slider{
-		padding-bottom: 10px;
+		padding-bottom: 15px;
+		.swiper-pagination-bullets{bottom:0!important;}
 	}
 	@media (max-width: 1199px) {
 		grid-column: span 6;
