добавлена-вкладка-Состав-уход

--- a/src/pug/sections/_single-product.pug
+++ b/src/pug/sections/_single-product.pug
@@ -153,6 +153,44 @@ section.single-product.pt-md-0
 						a(href="#!").link-text Внутренний карман Big Box
 						
 					//=======single item =====	
-					.accordion-header.txt-20 Вы работаете только с гражданами РФ?
+					.accordion-header.txt-20 Состав уход
 					.accordion-body
-						p Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit nostrum error hic illum eius consequatur molestiae repellat fugiat quae porro cum excepturi nulla fugit, vero suscipit minus exercitationem quam veritatis!
+						.care-instruction
+							ul
+								li
+									span Верх:
+									p Полиэстер 100%
+								li
+									span Утеплитель:
+									p Valtherm
+								li
+									span Подкладка:
+									p Шелк искусственный
+								li
+									span Мех:
+									p Искуственный
+						
+						.care-instruction.care-instruction--column
+							ul
+								li
+									
+									span
+										+svg-icon('hand-wash')
+									p Допускается ручная стирка при температуре 30°С
+								li
+									span
+										+svg-icon('not-bleach')
+									p Не отбеливать, не использовать моющие средства и порошки с хлором
+								li
+									span
+										+svg-icon('iron')
+									p Гладить при температуре не выше 110°С
+								li
+									span
+										+svg-icon('dry')
+									p Химическая чистка любыми растворителями запрещена
+								li
+									span
+										+svg-icon('machine-drying')
+									p Машинная сушка запрещена
+									
