add-search-result-page

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -38,5 +38,8 @@ block content
 				span Таблицы размеров
 			a(href="manual-page.html")
 				span Инструкция по уходу
+			a(href="search-result.html")
+				span Результат поиска
+				
 block variables
 	-var title = "Start page";
