--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -38,5 +38,6 @@
 @import "sections/_manual-content.scss";
 @import "sections/_footer.scss";
 @import "pages/_partners-success.scss";
+@import "sections/_search-result.scss";
   //ui
 @import "ui/_ui-navigation";
