--- a/src/scss/sections/_search-result.scss
+++ b/src/scss/sections/_search-result.scss
@@ -1,4 +1,10 @@
-.search-result.search-result--empty .search-result__content{
-	
+.search-result--empty{
 	padding-top:220px;
+	text-align: center;
+}
+.visible-mobile{
+	display: none;
+	@media (max-width: 767px) {
+	display: block;
+	}
 }
