скрыты стили Ui-страницы

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -40,4 +40,4 @@
 @import "pages/_partners-success.scss";
 @import "sections/_search-result.scss";
   //ui
-@import "ui/_ui-navigation";
+// @import "ui/_ui-navigation";
