--- a/src/pug/pages/search-result.pug
+++ b/src/pug/pages/search-result.pug
@@ -4,6 +4,16 @@ block content
 	.page-wrapper.page-wrapper--white
 		include ../sections/_header
 		main.inner-main
+			section.inner-search-form
+				.container
+					form.search-form
+						.form-item.form-item--border
+							.form-input
+								input(type="search" name="search_input" placeholder="Что Вы ищите?")
+								//===== кнопка reset ====
+								button.btn-clear(type="reset")
+									svg.svg-close
+										use(href='./img/sprite.svg#svg-close')
 			section.search-result
 				.container
 					//====хлебные крошки===
