--- a/src/scss/sections/_search-result.scss
+++ b/src/scss/sections/_search-result.scss
@@ -1,5 +1,14 @@
+section.inner-search-form{
+	background-color: var(--bg-bg-grey);
+	padding-top: 70px;
+	padding-bottom: 70px;
+	@media (max-width: 1199px) {
+	padding-top: 40px;
+	padding-bottom: 40px;
+	}
+}
 .search-result--empty{
-	padding-top:220px;
+	padding-top:120px;
 	text-align: center;
 }
 .visible-mobile{
