--- a/src/scss/sections/_single-product.scss
+++ b/src/scss/sections/_single-product.scss
@@ -79,6 +79,15 @@
 	grid-column: span 12;
 	display: flex;
 	justify-content: center;
+	position: relative;
+	width: 100%;
+	aspect-ratio: 45 / 64;
+	a img{
+		position: absolute;
+		inset:0;
+		z-index: 2;
+	}
+	
 }
 .single-product__gallery  .product-foto{text-align: center;}
 .care-instruction{
