--- a/src/scss/sections/_search-result.scss
+++ b/src/scss/sections/_search-result.scss
@@ -1,15 +1,25 @@
-section.inner-search-form{
+.inner-search-form{
 	background-color: var(--bg-bg-grey);
-	padding-top: 70px;
-	padding-bottom: 70px;
+	
+	padding-bottom: 50px;
 	@media (max-width: 1199px) {
-	padding-top: 40px;
-	padding-bottom: 40px;
+		
+		padding-top: 40px;
+		padding-bottom: 40px;
+	}
+	@media (max-width: 767px) {
+		background-color: var(--style);
+		padding-bottom: 0;
+		
 	}
 }
 .search-result--empty{
 	padding-top:120px;
 	text-align: center;
+	@media (max-width: 767px) {
+		padding-top: 16px;
+		
+	}
 }
 .visible-mobile{
 	display: none;
