Изменение-ширины-полос-слайдера

--- a/src/pug/pages/search-result.pug
+++ b/src/pug/pages/search-result.pug
@@ -10,7 +10,7 @@ block content
 					.breadcrumbs
 						//===ссылки отображаются на десктоп версии и скрываются на < 1024px
 						a(href="index.html") Главная
-						a(href="#!") Верхняя одежда
+						a(href="#!") Результаты поиска
 						//===== этот пункт хлебных крошек отображается на экранах до 1024px
 						p
 							a(href="index.html").txt-24.chevron-link
@@ -28,7 +28,6 @@ block content
 										use(href='./img/sprite.svg#svg-close')
 			section.search-result
 				.container
-					
 					//====сообщение, если  поиск не дал результатов ====
 					.search-result--empty
 						.txt-24.mb-16  Этот поиск не дал результата
