правка-состав-уход

--- a/src/pug/sections/_single-product.pug
+++ b/src/pug/sections/_single-product.pug
@@ -140,7 +140,7 @@ section.single-product.pt-md-0
 						li Список 5
 
 				//=========acordion========
-				.accordion-group
+				.accordion-group.accordion-group--open
 					//=======single item =====
 					.accordion-header.txt-20 Технологии и материалы
 					.accordion-body
