--- a/src/pug/sections/_authoriz-form.pug
+++ b/src/pug/sections/_authoriz-form.pug
@@ -14,7 +14,7 @@
 			button(type="submit").btn-accent.w-100 Войти
 		.form-item
 			.txt-14.txt-center Забыли пароль? 
-				a(href="password-form.html").txt-accent.link-item Восстановить
+				a(href="recovery-password.html").txt-accent.link-item Восстановить
 
 
 		
